# online_store_django

./: dump_data_27-04-2024.json  groups.json  pyproject.toml
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_article_content.py  0003_alter_article_slug.py  0004_alter_article_content.py  0005_alter_article_image.py
blog/templates/blog/: article_confirm_delete.html  article_detail.html  article_list.html
catalog/: admin.py  catalog_data.json  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_product_manufactured_at.py  0003_alter_product_created_at_alter_product_updated_at.py  0004_remove_product_manufactured_at.py  0005_user.py  0006_alter_user_phone.py  0007_productversion.py  0008_product_owner.py  0009_product_is_pub.py  0010_alter_product_options.py
catalog/templates/catalog/: base.html  category_list.html  contacts.html  home.html  index.html  product.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html  user_form.html  write_mess.html
catalog/templates/catalog/includes/: inc_category.html  inc_main_menu.html  inc_product.html
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: del_users.py
users/migrations/: 0001_initial.py  0002_alter_user_country.py
users/templates/users/: login.html  register.html  restore_password.html  user_form.html
